[package]
name = "compile_error"
description = "cargo-near-new-project-description"
version = "0.1.0"
edition = "2021"
# TODO: Fill out the repository field to help NEAR ecosystem tools to discover your project.
# NEP-0330 is automatically implemented for all contracts built with https://github.com/near/cargo-near.
# Link to the repository will be available via `contract_source_metadata` view-function.
repository = "https://github.com/<xxx>/<xxx>"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.near.reproducible_build]
image = "dj8yfo/sourcescan:0.x.x-dev-pr-main-add-clang"
image_digest = "sha256:4476bd5fb3708e5e4271908b6169ed70e02ae79c38f43a9f29f5ddad9413bfaa"
passed_env = []
container_build_command = ["cargo", "near", "build", "--no-abi"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
near-sdk = { version = "5.5.0", features = ["unstable"] }
near-contract-standards = "5.5.0"

hex="0.4.3"
bitcoin = { version = "0.32.0", default-features = false, features = ["serde"] }
k256 = "0.13.1"
ed25519-dalek="2.1.0"
crypto-shared = { git = "https://github.com/near/mpc", rev = "0afee9004a1b1c3386940e60c28cff7cf1b5978c"}

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.12", features = ["custom"] }

[dev-dependencies]
near-workspaces = "0.14"
tokio = "1.38"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true
